tests/sumo/extended/calibrator/errors/vClass_mismatch/errors.sumo.meso
Error: Vehicle 'cali.6000.0' has no valid route. No connection between edge 'beg2' and edge 'middle'.
Quitting (on error).
